ngx-ingress.yaml
apiVersion: extensions/vibeta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: k8s.website.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
